# cassie-mujoco-sim

./: CMakeLists.txt  build.sh
example/: CMakeLists.txt  my_ctrl.cpp
include/: cassiemujoco.h
src/: cassiemujoco.c
